# ai_content_analyzer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
src/ai_content_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/app/: main.py
src/app/api/v1/: __init__.py  analyze.py  jobs.py  reports.py
src/app/core/: config.py  logging.py  metrics.py
src/app/schemas/: __init__.py  campaign.py  error.py  ingestion.py  jobs.py  media.py  moderation.py  report.py  summarization.py  transcript.py
src/app/services/: aggregation_service.py  ingestion_service.py  job_store.py  media_service.py  moderation_service.py  post_store.py  report_store.py  summarization_service.py  transcription_service.py
src/app/utils/: arq.py  ffmpeg.py  files.py  retry.py  scoring.py  stage_logger.py  status_mapper.py
src/app/workers/: tasks.py  worker.py
tests/: test_ingestion_service.py  test_main.py  test_media_service.py  test_models.py  test_moderation_service.py  test_summarization_service.py  test_transcription_service.py
